added general layout of website, flexboxed left nav bar and right side body, added background image to body

--- a/index.html
+++ b/index.html
@@ -3,41 +3,55 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Intro to Git</title>
   </head>
+
   <body>
-    <h1>Intro to Git</h1>
-    <div class="before">
-      <h2>Before we get started</h2>
-      <!--add information about installing vscode to machine-->
-    </div>
-    <div class="creating-repository">
-      <h2>Create your first repository in Github</h2>
-    </div>
-    <div class="VSCode">
-      <h2>VSCode</h2>
-      <div class="cloning-vscode">
-        <h3>Opening your project in VsCode</h3>
+    <div class="background"></div>
+    <nav>
+      <h1>Intro to Git</h1>
+      <a href="#before">Before we get started</a>
+      <a href="#before">Before we get started</a>
+      <a href="#before">Before we get started</a>
+      <div class="footer">
+        <h2>made with 💖 by Reem</h2>
+        <h3>check out the github repo <a href="link">here!</a></h3>
       </div>
-      <div class="hackatime-vscode">
-        <h3>Installing Hackatime on VSCode</h3>
+    </nav>
+    <div class="section">
+      <div class="before">
+        <h2>Before we get started</h2>
+        <!--add information about installing vscode to machine-->
       </div>
-      <div class="commiting-vscode">
-        <h3>Commiting your code using Terminal</h3>
+      <div class="creating-repository">
+        <h2>Create your first repository in Github</h2>
       </div>
-    </div>
-    <div class="Codespaces">
-      <h2>Codespaces</h2>
-    </div>
-    <div class="openingwith-codespaces">
-      <h3>Opening your project in Codespaces</h3>
-    </div>
-    <div class="hackatime-codespaces">
-      <h3>Installing Hackatime in CodeSpaces</h3>
-    </div>
-    <div class="gui-codespaces"><h3>Commiting using the GUI</h3></div>
-    <div class="nextup">
-      <h2>Other things you can learn!</h2>
+      <div class="VSCode">
+        <h2>VSCode</h2>
+        <div class="cloning-vscode">
+          <h3>Opening your project in VsCode</h3>
+        </div>
+        <div class="hackatime-vscode">
+          <h3>Installing Hackatime on VSCode</h3>
+        </div>
+        <div class="commiting-vscode">
+          <h3>Commiting your code using Terminal</h3>
+        </div>
+      </div>
+      <div class="Codespaces">
+        <h2>Codespaces</h2>
+      </div>
+      <div class="openingwith-codespaces">
+        <h3>Opening your project in Codespaces</h3>
+      </div>
+      <div class="hackatime-codespaces">
+        <h3>Installing Hackatime in CodeSpaces</h3>
+      </div>
+      <div class="gui-codespaces"><h3>Commiting using the GUI</h3></div>
+      <div class="nextup">
+        <h2>Other things you can learn!</h2>
+      </div>
     </div>
   </body>
 </html>
