made some changes to the css (font faces, padding, margin, making text larger) and fixed up some of the html ids

--- a/index.html
+++ b/index.html
@@ -120,20 +120,18 @@
       </div>
     </nav>
 
-    <main class="section">
+    <main>
       <div class="intro" id="intro">
         <h2>Introduction to Git Tutorial</h2>
         <p>
-          Welcome to this introductory tutorial on Git! Here, you'll learn the
-          fundamental concepts and practical steps to get started with version
-          control using Git, manage your code with GitHub, and track your coding
-          time with Hackatime.
+          Coded up your first project and wanna store it on GitHub? Read this
+          tutorial to learn how!
         </p>
         <hr class="gradient-hr" />
       </div>
 
-      <div class="intro-to-github" id="github">
-        <h3>Introduction to GitHub</h3>
+      <div class="what-is-github" id="github">
+        <h3>What is Github</h3>
         <p>
           GitHub is a web-based platform that uses Git for version control. It's
           a central place where developers can store, manage, and collaborate on
@@ -210,13 +208,16 @@
           <p>You should now see your files in the Explorer sidebar.</p>
         </div>
       </div>
+      <hr class="gradient-hr" />
 
       <div class="intro-to-git" id="git">
-        <h3 id="what-is-git">Introduction to Git</h3>
+        <h2 id="intro-to-git">Introduction to Git</h2>
+        <h3 id="what-is-git">What is Git</h3>
         <h3 id="install-git">Installing Git</h3>
       </div>
-
+      <hr class="gradient-hr" />
       <div class="intro-to-hackatime" id="intro-hackatime">
+        <h2 id="hackatime">Setting up Hackatime</h2>
         <h3 id="what-is-hackatime">What is Hackatime</h3>
         <h3 id="hackatime-vs-wakatime">Difference between it and Wakatime</h3>
         <h3 id="signing-into-hackatime">Signing into Hackatime</h3>
@@ -224,8 +225,9 @@
         <h3 id="installing-wakatime">Installing Wakatime</h3>
         <h3 id="check-for-correct">Check for correct</h3>
       </div>
-
+      <hr class="gradient-hr" />
       <div class="committing-code" id="committing-code">
+        <h2 id="code">Lets code and see our changes!</h2>
         <h3 id="writing-code">Writing some code and seeing changes</h3>
         <h3 id="committing-code-step">Committing the code</h3>
         <h3 id="pushing-code">Pushing the code</h3>
